--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "fitness-tracker",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+  "loader-utils": ">=2.0.3"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -16,6 +19,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+    "loader-utils": ">=2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
