--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-  "loader-utils": ">=2.0.3"
+    "loader-utils": ">=2.0.3",
+    "nth-check": ">=2.0.1"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -18,8 +19,10 @@
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-    "loader-utils": ">=2.0.3"
+    "web-vitals": "^2.1.4",
+    "loader-utils": ">=2.0.3",
+    "nth-check": ">=2.0.1"
+
   },
   "scripts": {
     "start": "react-scripts start",
